syntax = "proto3";

package dht;
option go_package = ".;dht";

message PingRequest {
  bytes PeerId = 1;
  bytes RandomId = 2;
}

message PingResponse {
  bytes RandomId = 1;
}

message FindRequest {
  bytes PeerId = 1;
  bytes Id = 2;
}

message UDPAddr {
  bytes IP = 1;
  int32 Port = 2;
  string Zone = 3;
}

message UdpNode {
  UDPAddr Addr = 1;
  bytes NodeId = 2;
}

message FindNodeResponse {
  repeated UdpNode nodes = 1;
}

message FindValueResponse {
  repeated UdpNode nodes = 1;
  bytes value = 2;
}

message StoreRequest {
  bytes PeerId = 1;
  bytes Key = 2;
  bytes Value = 3;
}