syntax = "proto3";

package rpc;
option go_package = ".;rpc";

message Message {

  enum TypeEnum {
    REQUEST = 0;
    RESPONSE = 1;
  }

  TypeEnum Type = 1;

  uint32 ServiceId = 2;

  uint64 CallId = 3;

  bytes Payload = 4;

  bytes Error = 5;

}
